--- a/dashapp/assets/style.css
+++ b/dashapp/assets/style.css
@@ -1,3 +1,9 @@
-body {
+body, html {
     background-image: linear-gradient(#246066, #1f4051);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.nav-link.active {
+    background: #246066;
 }
