--- a/dashapp/assets/style.css
+++ b/dashapp/assets/style.css
@@ -6,4 +6,7 @@ body, html {
 
 .nav-link.active {
     background: #246066;
+    border: 1px solid transparent;
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
 }
