--- a/dashapp/assets/style.css
+++ b/dashapp/assets/style.css
@@ -1,12 +1,90 @@
-body, html {
-    background-image: linear-gradient(#246066, #1f4051);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+body {
+    font-family: sans-serif;
+    min-height: 100vh;
+    background-color: #fcfcfc;
 }
 
-.nav-link.active {
-    background: #246066;
-    border: 1px solid transparent;
-    border-top-left-radius: 0.25rem;
-    border-top-right-radius: 0.25rem;
+h1, h2, h3, h4, h5, h6 {
+    color: black;
 }
+
+p, ul, ol {
+    color: black;
+    font-size: 1rem;
+    line-height: 1.5;
+    text-align: justify;
+}
+
+.hr-title {
+    background: linear-gradient(to right, rgba(86, 104, 113, 1), rgba(86, 104, 113, 0.3));
+    width: 30%;
+    text-align: left;
+    margin: 0;
+    height: 2px;
+    border: none;
+}
+
+.logi-btn {
+    background-color: #626e60;
+    color: #fcfcfc;
+    vertical-align: middle;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 0.25rem;
+    padding: 0.375rem 0.75rem;
+    box-shadow: 1px 1px 0.1rem 0 gray;
+
+}
+
+.logi-btn:hover {
+    box-shadow: 0 0 0.5rem 0 gray;
+    background-color: #6f7c6d;
+}
+
+.logi-btn:focus {
+    box-shadow: 0 0 0.1rem 0.1rem #6f7c6d;
+    outline: none;
+}
+
+@media (max-width: 64em) {
+    #page-content {
+        width: 100%;
+        border: none;
+        background-color: #fcfcfc;
+    }
+}
+
+@media (min-width: 64em) {
+
+    body {
+        /* background-image: linear-gradient(to bottom right, #438496, #fcfcfc 50%); /* #708348 */
+        /* background-image: linear-gradient(to bottom right, #07889B, #fcfcfc 50%); /* #708348 */
+        /* background-image: repeating-linear-gradient(-20deg, #af473c 0%, #af473c 15%, transparent 15%, transparent);
+        background-image: repeating-linear-gradient(25deg, transparent, transparent 40%, #af473c 40%, #af473c 70%, transparent 70% , transparent);
+        */
+        background-image: repeating-linear-gradient(25deg, transparent, transparent 30%, #af473c 30%, #af473c 70%, transparent 70% , transparent);
+        background-size: 100vw 120vw;
+        background-repeat: repeat-y;
+        background-position: 0% 40vw;
+        background-attachment: scroll;
+    }
+
+    #page-content {
+        /* border: 1px solid gray; */
+        border: none;
+        border-radius: 3px;
+        padding: 1rem;
+        background-color: rgba(252, 252, 252, 0.95);
+        margin-left: 26rem;
+        margin-right: 4rem;
+        margin-top: 4rem;
+        /*max-width: 64rem;*/
+    }
+}
+
+@media (min-width: 104em) {
+    #page-content {
+        margin-right: 26rem;
+    }
+}
+
