--- a/dashapp/assets/style.css
+++ b/dashapp/assets/style.css
@@ -78,6 +78,7 @@ p, ul, ol {
         margin-left: 26rem;
         margin-right: 4rem;
         margin-top: 4rem;
+        margin-bottom: 4rem;
         /*max-width: 64rem;*/
     }
 }
