--- a/dashapp/assets/s02_sidebar.css
+++ b/dashapp/assets/s02_sidebar.css
@@ -67,7 +67,7 @@ a.nav-link {
         margin: 10rem 1rem 2rem 2rem;
         padding: 2rem 1rem;
         border: 1px gray solid;
-        box-shadow: 1px 1px 2px 0 gray;
+        box-shadow: 1px 1px 4px 0 black;
         border-radius: 5px;
         color: #000000;
         background: var(--c-bg-light);
